# hhfa-demo

./: .gitignore  README.md  example_dataset.dta
backend/: Cargo.toml  Dockerfile
backend/src/: analyze.rs  dirs.rs  main.rs  run_r.rs  types.rs  typescript_export.rs  varlist.rs  varlist_script.R
backend/src/templates/: analyze_script.hbs  partial_analysis.hbs  partial_remap.hbs  script.hbs  varlist_script.R
frontend/: 404.html  asset-manifest.json  docs.html  index.html
frontend/_next/static/0_jPQYjisTQbkEbIN0KxI/: _buildManifest.js
frontend/_next/static/chunks/: 3f43c12b.e86a210fb5460aaa8b98.js  framework.7ec230ec27bd2df0a8e4.js  main-fcde7eb9723ef9eaca99.js
frontend/src/: next.config.js  package.json  tailwind.config.js
frontend/src/content/: TODO.md  app.tsx  default_structure_BLANK.json  defaults.ts  i18n.ts  types_extra.ts  types_server.ts  urls.ts  utils.ts  validate_indicators.ts
frontend/src/content/actions/: crud.ts
frontend/src/content/components/: analyses.tsx  analysis_editor.tsx  config_editor.tsx  configuration.tsx  indicator_editor.tsx  indicators.tsx  load_editor.tsx  main.tsx  raw_var_selector.tsx  results.tsx  script.tsx  uploads.tsx  uploads_editor.tsx  variables.tsx  (+1 more)
frontend/src/pages/: _app.tsx  documentation.tsx  index.tsx  tutorial.tsx
frontend/src/styles/: tailwind.css
frontend/static/css/: 2.33748133.chunk.css  2.94fde2c0.chunk.css  main.8050bdcf.chunk.css  main.8d997258.chunk.css
frontend/static/js/: 2.176b3d6e.chunk.js  2.176b3d6e.chunk.js.LICENSE.txt  2.4a1995f3.chunk.js  main.124e2c78.chunk.js  main.5671c7b2.chunk.js
(+11 files in other folders)
